# os_lab_678

./: .gitignore  CMakeLists.txt  build_cache.sh  fix_shm.sh  report.docx  run.sh
include/client/: computing_node.h  mm_computing_node.h
include/core/: defines.h  message_manager.h
include/server/: control_node.h  mm_control_node.h  parsing.h
include/utils/: avl.hpp  avl_c_externs.h  avl_wrapper.hpp  logger.h
misc/: test_client.c  test_server.c
src/: CMakeLists.txt  avl.cpp  avl_c_externs.h  avl_wrapper.cpp  computing_node.c  control_node.c  control_node.h  defines.h  ipc_mutex.c  ipc_mutex.h  logger.c  logger.h  main  main.c  main.cpp  message_manager.c  message_manager.h  parsing  parsing.c  parsing.h  processor.c  processor.h
src/client/: computing_node.c  mm_computing_node.c
src/core/: ipc_mutex.c
src/server/: control_node.c  main.cpp  mm_control_node.c  parsing.c
src/utils/: avl.cpp  avl_wrapper.cpp  logger.c
tests/: test01.txt  test02.txt  test03.txt  test04.txt
